# UBB

./: .gitmodules
1_semester/FP/exercises/: lambda_map_filter_exercises.py  projecteuler.py
1_semester/FP/labs/: lab_1.py  lab_2.py
1_semester/FP/seminars/: seminar_10.py  seminar_11.py  seminar_7.py
2_semester/AG/: graphentheorie.docx
2_semester/AG/lab_1/: CMakeLists.txt  Graph.cpp  Graph.h  Graph_2.cpp  Graph_2.h  app.cpp  grph.txt
2_semester/AG/lab_5/: CMakeLists.txt  Graph.cpp  Graph.h  Graph.txt  cities.txt  main.cpp
2_semester/AG/lab_6/: Graph.cpp  Graph.h  brebrebtrs  grph.txt  main.cpp
2_semester/DSA/lab5_SortedMultiMap/: CMakeLists.txt  ExtendedTest.cpp  SMMIterator.cpp  SMMIterator.h  ShortTest.cpp  SortedMultiMap.cpp  SortedMultiMap.h
2_semester/DSA/lab_1_Bag/: App.cpp  Bag.cpp  Bag.h  BagIterator.cpp  BagIterator.h  CMakeLists.txt  ExtendedTest.cpp  README.md  ShortTest.cpp
2_semester/DSA/lab_2/: README.md
2_semester/DSA/lab_2/Bag_dll/: Bag.cpp  Bag.h  BagIterator.cpp  BagIterator.h  CMakeLists.txt  ShortTest.cpp
2_semester/DSA/lab_2/Map_dll/: CMakeLists.txt  Map.cpp  Map.h  MapIterator.cpp  MapIterator.h
2_semester/DSA/lab_2/Map_sll/: App.cpp  CMakeLists.txt  Map.cpp  Map.h  MapIterator.cpp  MapIterator.h  ShortTest.cpp
2_semester/DSA/lab_2/PriorityQueue_dll/: CMakeLists.txt  ExtendedTest.cpp  PriorityQueue.cpp  PriorityQueue.h  ShortTest.cpp
2_semester/DSA/lab_2/PriorityQueue_sll/: CMakeLists.txt  PriorityQueue.cpp  PriorityQueue.h  ShortTest.cpp
2_semester/DSA/lab_2/SortedIndexedList_dll/: CMakeLists.txt  SortedIndexedList.cpp  SortedIndexedList.h
2_semester/DSA/lab_3/: README.md
2_semester/DSA/lab_3/MultiMap_dlla/: CMakeLists.txt  ExtendedTest.cpp  MultiMap.cpp  MultiMap.h  MultiMapIterator.cpp  MultiMapIterator.h  ShortTest.cpp  ShortTest.h
2_semester/DSA/lab_3/MultiMap_dlla/MultiMapLab3Final/: App.cpp  ExtendedTest.cpp  MultiMap.cpp  MultiMap.h  MultiMapIterator.cpp  MultiMapIterator.h  ShortTest.cpp  ShortTest.h
2_semester/DSA/lab_4_Matrix/: CMakeLists.txt  ExtendedTest.cpp  Matrix.cpp  Matrix.h  MatrixIterator.cpp  MatrixIterator.h  README.md  ShortTest.cpp
2_semester/DSA/lab_5_SortedSet/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  README.md  ShortTest.cpp  ShortTest.h  SortedSet.cpp  SortedSet.h  SortedSetIterator.cpp  SortedSetIterator.h
2_semester/OOP/lab_1_ex_5/: CMakeLists.txt  main.cpp
2_semester/OOP/lab_2/: CMakeLists.txt  L2_Ciobanu_Tudor_2_duration.cpp  L2_Ciobanu_Tudor_2_duration.h  L2_Ciobanu_Tudor_2_duration_test.cpp
2_semester/OOP/lab_3/: CMakeLists.txt  Dependency Structure Matrix of a laptop.docx  L3_Ciobanu_Tudor_711_DSM.cpp  L3_Ciobanu_Tudor_711_DSM.h  L3_Ciobanu_Tudor_711_DSM_test.cpp
2_semester/OOP/lab_4/: CMakeLists.txt  Fruit.cpp  Fruit.h  FruitController.cpp  FruitController.h  FruitRepo.cpp  FruitRepo.h  FruitTest.cpp  FruitTest.h  FruitUI.cpp  FruitUI.h  Shop.cpp
2_semester/OOP/lab_5_and_6_combined/: CMakeLists.txt  CSVRepository.cpp  CSVRepository.h  Controller.cpp  Controller.h  Domain.cpp  Domain.h  InMemoryRepository.cpp  InMemoryRepository.h  Repository.h  UI.cpp  UI.h  Unit_Tests.cpp  Unit_Tests.h  main.cpp  scooters.csv  test.csv
2_semester/SD/lab_1/: labor 1.ipynb
2_semester/SD/lab_2/: labor2.ipynb
2_semester/SD/lab_3/: labor 3.ipynb
2_semester/SD/lab_4/: labor4.ipynb
2_semester/SD/lab_5/: labor5.ipynb
3_semester/DB/labs/: lab_3_teil_1.sql  lab_4_teil_1.sql  lab_4_teil_2.sql
3_semester/DB/practic/: create_tables.sql  insert_values.sql  queries.sql
3_semester/DB/simulare_practic/: create_tables.sql  insert_values.sql  queries.sql
3_semester/LP/: algorithmus.pl  datenbank.pl  notite prolog.pages
3_semester/LP/labs/: labor_2.pl  labor_3.pl  labor_4.pl  labor_5.pl  labor_6.pl
3_semester/MAP/labs/: README.md
3_semester/PS/practic/: main.py
3_semester/PS/pregatirePractic/: main.py
3_semester/RC/: test1.pkt  ultimul_test.pkt
3_semester/RC/curs_1/: udp_client.py  udp_server.py
3_semester/RC/curs_2/: client_add2numbers.py  server_add2numbers.py
3_semester/RC/curs_3/: tcp_client.py  tcp_server.py
5_semester/PDM/TravelTalk/: README.md  app.json  metro.config.js  package-lock.json  package.json  server.ts  vercel.json
5_semester/proiect colectiv/docs/: Product_backlog_unternehmensplattform.pages  ProjectStatusReport.pages  Project_Timeline_v01.numbers
6_semester/Cryptography/Seminar1.Tudor.Ciobanu/: Assignment1.java  Assignment2_1.java  Assignment2_2.java  Assignment3.java  compile-run1.sh  compile-run2_1.sh  compile-run2_2.sh  compile-run3.sh
6_semester/Cryptography/Seminar2.Tudor.Ciobanu/: Assignment1.java  Assignment2.java  Assignment3.java  compile-run1.sh  compile-run2.sh
(+737 files in other folders)
